# cave_cli

./: .gitignore  DEVELOPMENT.md  README.md  cave-1.3.0.sh  cave-1.4.0.sh  cave.sh  help-1.4.0.txt  help.txt  install.sh  pyproject.toml  requirements.txt  setup.cfg  utils.sh
.claude/: settings.json
.gemini/: settings.json
cave_cli/: __init__.py  cli.py
cave_cli/commands/: create.py  doctor.py  kill.py  list_cmd.py  list_versions.py  prettify.py  purge.py  reset.py  run.py  sync_cmd.py  test.py  theme.py  uninstall.py  update.py  upgrade.py  version.py
cave_cli/utils/: cache.py  constants.py  display.py  docker.py  env.py  git.py  logger.py  net.py  subprocess.py  sync.py  validate.py
legacy/: help-1.4.0.txt  help.txt  install.sh  utils.sh
