[tool.black]
line-length = 80
target-version = ['py313']
exclude = '/.*(__pycache__).*/'

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cave_cli"
version = "3.5.5"
description = "CLI for creating and managing Docker-based CAVE web applications."
authors = [
    {name = "MIT-CAVE", email = "cave-contact@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
cave = "cave_cli.cli:main"

[project.urls]
"Homepage" = "https://github.com/MIT-CAVE/cave_cli"
"Bug Tracker" = "https://github.com/MIT-CAVE/cave_cli/issues"
